--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,94 @@
+/* font-family: 'Raleway',
+sans-serif;
+font-family: 'Roboto',
+sans-serif; */
 :root {
     --accent-color: #2196F3;
     --main-text-color: #757575;
     --backround-color: #E5E5E5;
 }
 body {
-    width: 1600px;
+width: 1600px;
+
 background-color: #FFFFFF;
+color: var(--main-text-color);
+
+font-family: Roboto, sans-serif;
 }
 .container {
+    width: 1600px;
+    height: 80px;
     display: flex;
 }
 .navigation>.link {
     color: #212121;
+
     text-decoration: none;
 }
 .logo {
     color: var(--accent-color); 
 }
 .link.logo {
+    font-family: Raleway, sans-serif;
+
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
     padding: 215px;
-    margin-right: 93px;
+
+    margin-right: 80px;
 }
 .link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
     margin-right: 50px;
+
     text-decoration: none;
 }
 .link.current {
     color: var(--accent-color);
 }
 .contacts {
-    margin-left: 331px;
+    margin-left: 300px;
 }
 .phone {
     color: var(--main-text-color);
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
     text-decoration: none;
 }
     /* CTA */
 .hero {
     width: 1600px;
     height: 600px;
+
     background-color: #2F303A;
 }
-.title {
-    color: var(#FFFFFF);
-}
+.hero-title {
+    color:#FFFFFF;
+
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    
+   }
+   .button {
+        width: 200px;
+        height: 50px;
+        left: 700px;
+        top: 430px;
+        border-radius: 4px;
+
+       color: #FFFFFF;
+       background-color: var(--accent-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        
+        position: absolute;
+        margin-top: 40px;
+   }
