--- a/css/styles.css
+++ b/css/styles.css
@@ -17,27 +17,30 @@ color: var(--main-text-color);
 font-family: Roboto, sans-serif;
 }
 .container {
-    width: 1600px;
-    height: 80px;
     display: flex;
-}
+    }
 .navigation>.link {
     color: var(--title-color);
+    justify-content: center;
 
     text-decoration: none;
 }
 .logo {
-    color: var(--accent-color); 
+    color: var(--accent-color);
 }
-.link.logo {
+.mlogo {
+    color: var(--title-color);
+}
+.main {
     font-family: Raleway, sans-serif;
 
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.19;
-    padding: 215px;
+    padding-left: 50px;
+    margin-right: 93px;
+    text-decoration: none;
+  
 
-    margin-right: 80px;
 }
 .link {
     font-weight: 500;
@@ -47,20 +50,30 @@ font-family: Roboto, sans-serif;
 
     text-decoration: none;
 }
-.link.current {
+.link:hover,
+.link:focus {
     color: var(--accent-color);
 }
-.contacts {
-    margin-left: 300px;
-}
-.phone {
-    color: var(--main-text-color);
 
+.link.current {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+
+    color: var(--main-text-color);
+
     text-decoration: none;
 }
+
+.link.current:hover,
+.link.current:focus {
+    color: var(--accent-color);
+}
+.contacts {
+    margin-left: 331px;
+
+}
+
     /* CTA */
 .hero {
     width: 1600px;
@@ -76,6 +89,7 @@ font-family: Roboto, sans-serif;
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
+
     text-transform: uppercase;
     
    }
@@ -121,11 +135,122 @@ font-family: Roboto, sans-serif;
     
         color: #757575;
    }
+
    .works-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
+
     text-align: center;
     letter-spacing: 0.03em;
+
     color: var(--title-color);
+   }
+
+   .image {
+       margin-right: 30px;
+   }
+
+   .team {
+       background-color: #F5F4FA;;
+   }
+
+   .team-name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+        
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--title-color);
+   }
+
+   .team-post {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.18;
+    
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin-top: 10px;
+
+   }
+   .container2 {
+       background-color: #2F303A;
+   }
+   .logo2 {
+       color: #FFFFFF;
+   }
+   .list2 {
+    list-style: none;
+    padding-right: 215px;
+   }
+   .adress {
+       font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.71;
+    
+        letter-spacing: 0.03em;
+
+       color: #FFFFFF;
+
+        text-decoration: none;
+   }
+
+   .contacts-list2 {
+       font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.71;
+    
+        letter-spacing: 0.03em;
+    
+        color: rgba(255, 255, 255, 0.6);
+
+        text-decoration: none;
+   }
+   /* Страница портфолио */
+   .buttons {
+       padding-left: 517px;
+   }
+
+   .btn {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.62;
+    
+        text-align: center;
+        letter-spacing: 0.03em;
+    
+        color: var(--title-color);
+        background: #F5F4FA;
+        border-radius: 4px;
+       margin-left: 8px;
+   }
+   .portfolio-list {
+    list-style: none;
+
+    padding-left: 215px;
+
+    display: flex;
+    flex-wrap: wrap;
+   }
+   .portfolio-title {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 2;    
+        letter-spacing: 0.06em;
+    
+        color: var(--title-color);
+   }
+
+   .type {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.03em;
+    
+        color: var(--main-text-color);
    }
