--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,17 @@ font-family: Roboto, sans-serif;
    }
    .buttons {
        list-style: none;
-       cursor: pointer;
+
+   }
+
+   
+   .portfolio-list:hover {
+       text-decoration: underline var(--accent-color);
+   }
+
+   .portfolio-title:hover {
+       text-decoration: underline var(--accent-color);
+       
    }
    .button {
         width: 200px;
@@ -103,11 +113,18 @@ font-family: Roboto, sans-serif;
         left: 700px;
         top: 430px;
         border-radius: 4px;
-        font-family: inherit;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.06em;
 
        color: #FFFFFF;
        background-color: var(--accent-color);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        
+        cursor: pointer;
    }
    
    .hidden {
@@ -228,10 +245,17 @@ font-family: Roboto, sans-serif;
     
         color: #FFFFFF;
         background-color: var(--accent-color);
+
+        cursor: pointer;
+   }
+
+   .btn1:hover {
+        text-decoration: underline var(--accent-color);
    }
 
    .btn {
-        font-family: inherit;
+        font-family: 'Roboto';
+        font-style: normal;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.62;
@@ -242,7 +266,13 @@ font-family: Roboto, sans-serif;
         color: var(--title-color);
         background: #F5F4FA;
         border-radius: 4px;
+
+        cursor: pointer;
     
+   }
+
+   .btn:hover {
+       text-decoration: underline var(--accent-color);
    }
    .portfolio-list {
     list-style: none;
